IaC/xpipe-sindria/xpipe-gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpipe-gateway
  name: xpipe-gateway
  namespace: xpipe-sindria
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: xpipe-gateway
  sessionAffinity: None
  type: ClusterIP
